// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf parses story file project/src/autoTitle/csf/EmptyDefaultExport.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 17,
        "line": 5,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {},
  },
  "stories": [
    {
      "exportName": "Primary",
      "location": {
        "end": Position {
          "column": 20,
          "index": 169,
          "line": 9,
        },
        "start": Position {
          "column": 13,
          "index": 162,
          "line": 9,
        },
      },
      "properties": {
        "args": {
          "children": "Empty default export",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/autoTitle/csf/EmptyTitle.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 7,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {
      "title": "",
    },
  },
  "stories": [
    {
      "exportName": "Primary",
      "location": {
        "end": Position {
          "column": 20,
          "index": 183,
          "line": 11,
        },
        "start": Position {
          "column": 13,
          "index": 176,
          "line": 11,
        },
      },
      "properties": {
        "args": {
          "children": "Story with empty title and prefix",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/autoTitle/csf/ExtraTitle.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 7,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {
      "title": "Explicit title",
    },
  },
  "stories": [
    {
      "exportName": "Primary",
      "location": {
        "end": Position {
          "column": 20,
          "index": 197,
          "line": 11,
        },
        "start": Position {
          "column": 13,
          "index": 190,
          "line": 11,
        },
      },
      "properties": {
        "args": {
          "children": "Story with explicit title and prefix",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/autoTitle/csf/NoDefaultExport.stories.js 1`] = `
{
  "meta": {
    "declared": false,
    "location": undefined,
    "properties": {},
  },
  "stories": [
    {
      "exportName": "Primary",
      "location": {
        "end": Position {
          "column": 20,
          "index": 149,
          "line": 7,
        },
        "start": Position {
          "column": 13,
          "index": 142,
          "line": 7,
        },
      },
      "properties": {
        "args": {
          "children": "No default export",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/autoTitle/csf/nested/WithoutTitle.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 7,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {},
  },
  "stories": [
    {
      "exportName": "Primary",
      "location": {
        "end": Position {
          "column": 20,
          "index": 194,
          "line": 11,
        },
        "start": Position {
          "column": 13,
          "index": 187,
          "line": 11,
        },
      },
      "properties": {
        "args": {
          "children": "Without Title/Sample",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/autoTitle/csf/nested/nested.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 7,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {},
  },
  "stories": [
    {
      "exportName": "Primary",
      "location": {
        "end": Position {
          "column": 20,
          "index": 194,
          "line": 11,
        },
        "start": Position {
          "column": 13,
          "index": 187,
          "line": 11,
        },
      },
      "properties": {
        "args": {
          "children": "Nested redundant filename",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/autoTitle/csf/withIndex/index.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 7,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {},
  },
  "stories": [
    {
      "exportName": "Primary",
      "location": {
        "end": Position {
          "column": 20,
          "index": 194,
          "line": 11,
        },
        "start": Position {
          "column": 13,
          "index": 187,
          "line": 11,
        },
      },
      "properties": {
        "args": {
          "children": "Nested index filename",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/BasicCsf.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 11,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {
      "args": {
        "color": "blue",
      },
      "title": "Example/Basic CSF",
    },
  },
  "stories": [
    {
      "exportName": "Primary",
      "location": {
        "end": Position {
          "column": 20,
          "index": 252,
          "line": 15,
        },
        "start": Position {
          "column": 13,
          "index": 245,
          "line": 15,
        },
      },
      "properties": {
        "args": {
          "children": "Primary",
        },
      },
    },
    {
      "exportName": "Secondary",
      "location": {
        "end": Position {
          "column": 22,
          "index": 340,
          "line": 20,
        },
        "start": Position {
          "column": 13,
          "index": 331,
          "line": 20,
        },
      },
      "properties": {
        "args": {
          "children": "Secondary",
        },
      },
    },
    {
      "exportName": "Large",
      "location": {
        "end": Position {
          "column": 18,
          "index": 428,
          "line": 25,
        },
        "start": Position {
          "column": 13,
          "index": 423,
          "line": 25,
        },
      },
      "properties": {
        "args": {
          "children": "Large",
          "size": 24,
        },
      },
    },
    {
      "exportName": "Small",
      "location": {
        "end": Position {
          "column": 18,
          "index": 520,
          "line": 31,
        },
        "start": Position {
          "column": 13,
          "index": 515,
          "line": 31,
        },
      },
      "properties": {
        "args": {
          "children": "Small",
          "size": 12,
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/CsfV1.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 15,
        "line": 1,
      },
    },
    "properties": {
      "title": "Example/CSF v1",
    },
  },
  "stories": [
    {
      "exportName": "V1StoryName",
      "location": {
        "end": Position {
          "column": 24,
          "index": 72,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "index": 61,
          "line": 5,
        },
      },
      "properties": {
        "story": {
          "name": "Renamed via non-hoisted story",
        },
      },
    },
    {
      "exportName": "V2V1StoryName",
      "location": {
        "end": Position {
          "column": 26,
          "index": 243,
          "line": 11,
        },
        "start": Position {
          "column": 13,
          "index": 230,
          "line": 11,
        },
      },
      "properties": {
        "story": {
          "name": "v1 name should be overridden",
        },
        "storyName": "v2 name override",
      },
    },
    {
      "exportName": "V2V1StoryNameEmpty",
      "location": {
        "end": Position {
          "column": 31,
          "index": 466,
          "line": 18,
        },
        "start": Position {
          "column": 13,
          "index": 448,
          "line": 18,
        },
      },
      "properties": {
        "story": {
          "name": "v1 name should be used",
        },
        "storyName": "",
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/CsfWithMdx.stories.js 1`] = `
{
  "meta": {
    "declared": false,
    "location": undefined,
    "properties": {},
  },
  "stories": [
    {
      "exportName": "Basic",
      "location": {
        "end": Position {
          "column": 18,
          "index": 263,
          "line": 11,
        },
        "start": Position {
          "column": 13,
          "index": 258,
          "line": 11,
        },
      },
      "properties": {
        "args": {
          "children": "Basic",
        },
        "storyName": "Story name from JS",
      },
    },
    {
      "exportName": "Basic2",
      "location": {
        "end": Position {
          "column": 19,
          "index": 397,
          "line": 17,
        },
        "start": Position {
          "column": 13,
          "index": 391,
          "line": 17,
        },
      },
      "properties": {
        "args": {
          "children": "Basic 2",
        },
        "storyName": "Story name 2 from JS",
      },
    },
    {
      "exportName": "Basic3",
      "location": {
        "end": Position {
          "column": 19,
          "index": 537,
          "line": 23,
        },
        "start": Position {
          "column": 13,
          "index": 531,
          "line": 23,
        },
      },
      "properties": {
        "args": {
          "children": "Basic 3",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/CustomId.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "id": "Manually specified CSF story ID",
    "location": {
      "end": {
        "column": 1,
        "line": 4,
      },
      "start": {
        "column": 15,
        "line": 1,
      },
    },
    "properties": {
      "id": "Manually specified CSF story ID",
      "title": "Example/Custom ID CSF",
    },
  },
  "stories": [
    {
      "exportName": "Story",
      "location": {
        "end": Position {
          "column": 18,
          "index": 114,
          "line": 6,
        },
        "start": Position {
          "column": 13,
          "index": 109,
          "line": 6,
        },
      },
      "properties": {},
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/CustomName.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 12,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {
      "args": {
        "children": "Default content",
        "color": "orange",
      },
      "title": "Example/Custom Name",
    },
  },
  "stories": [
    {
      "exportName": "CustomName",
      "location": {
        "end": Position {
          "column": 23,
          "index": 292,
          "line": 16,
        },
        "start": Position {
          "column": 13,
          "index": 282,
          "line": 16,
        },
      },
      "properties": {
        "args": {
          "children": "Expected name: Custom story name",
        },
        "storyName": "Custom story name",
      },
    },
    {
      "exportName": "Overridden",
      "location": {
        "end": Position {
          "column": 23,
          "index": 453,
          "line": 22,
        },
        "start": Position {
          "column": 13,
          "index": 443,
          "line": 22,
        },
      },
      "properties": {
        "args": {
          "children": "Expected name: Custom story name override",
        },
        "storyName": "Custom story name override",
      },
    },
    {
      "exportName": "NamedViaVariable",
      "location": {
        "end": Position {
          "column": 29,
          "index": 682,
          "line": 29,
        },
        "start": Position {
          "column": 13,
          "index": 666,
          "line": 29,
        },
      },
      "properties": {
        "args": {
          "children": "Expected name: Custom story name var",
        },
        "storyName": "Custom story name var",
      },
    },
    {
      "exportName": "InterpolatedName",
      "location": {
        "end": Position {
          "column": 29,
          "index": 898,
          "line": 36,
        },
        "start": Position {
          "column": 13,
          "index": 882,
          "line": 36,
        },
      },
      "properties": {
        "storyName": "Custom story name var in template string",
      },
    },
    {
      "exportName": "EmptyName",
      "location": {
        "end": Position {
          "column": 22,
          "index": 1007,
          "line": 39,
        },
        "start": Position {
          "column": 13,
          "index": 998,
          "line": 39,
        },
      },
      "properties": {
        "storyName": "",
      },
    },
    {
      "exportName": "LeadingWhitespace",
      "location": {
        "end": Position {
          "column": 30,
          "index": 1086,
          "line": 42,
        },
        "start": Position {
          "column": 13,
          "index": 1069,
          "line": 42,
        },
      },
      "properties": {
        "storyName": "     Leading whitespace",
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/DeepTree.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 6,
      },
      "start": {
        "column": 15,
        "line": 3,
      },
    },
    "properties": {
      "title": "Example/Deep/Tree/With/Several/Kinds",
    },
  },
  "stories": [
    {
      "exportName": "Story",
      "location": {
        "end": Position {
          "column": 18,
          "index": 207,
          "line": 10,
        },
        "start": Position {
          "column": 13,
          "index": 202,
          "line": 10,
        },
      },
      "properties": {
        "args": {
          "children": "Deep hierarchy",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/Excluded.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 7,
      },
      "start": {
        "column": 15,
        "line": 4,
      },
    },
    "properties": {
      "excludeStories": [
        "excludedExport",
      ],
      "title": "Test/Exclusions/Excluded",
    },
  },
  "stories": [
    {
      "exportName": "excludedExport",
      "location": {
        "end": Position {
          "column": 27,
          "index": 27,
          "line": 1,
        },
        "start": Position {
          "column": 13,
          "index": 13,
          "line": 1,
        },
      },
      "properties": {},
    },
    {
      "exportName": "otherExport",
      "location": {
        "end": Position {
          "column": 24,
          "index": 89,
          "line": 2,
        },
        "start": Position {
          "column": 13,
          "index": 78,
          "line": 2,
        },
      },
      "properties": {},
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/ExportStyles.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 11,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {
      "args": {
        "color": "green",
      },
      "title": "Example/Export Styles",
    },
  },
  "stories": [
    {
      "exportName": "NormalExport",
      "location": {
        "end": Position {
          "column": 18,
          "index": 255,
          "line": 15,
        },
        "start": Position {
          "column": 6,
          "index": 243,
          "line": 15,
        },
      },
      "properties": {
        "args": {
          "children": "Export Style/Normal",
        },
      },
    },
    {
      "exportName": "AlternativeExportName",
      "location": {
        "end": Position {
          "column": 16,
          "index": 354,
          "line": 20,
        },
        "start": Position {
          "column": 6,
          "index": 344,
          "line": 20,
        },
      },
      "properties": {
        "args": {
          "children": "Export Style/Exported as",
        },
      },
    },
    {
      "exportName": "ExportNameOverridden",
      "location": {
        "end": Position {
          "column": 29,
          "index": 469,
          "line": 25,
        },
        "start": Position {
          "column": 6,
          "index": 446,
          "line": 25,
        },
      },
      "properties": {
        "args": {
          "children": "Export Style/Story name takes priority over modified export name",
        },
        "storyName": "Override name 3",
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/Form.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 5,
      },
      "start": {
        "column": 15,
        "line": 3,
      },
    },
    "properties": {
      "title": "Example/Form",
    },
  },
  "stories": [
    {
      "exportName": "Form",
      "location": {
        "end": Position {
          "column": 17,
          "index": 105,
          "line": 7,
        },
        "start": Position {
          "column": 13,
          "index": 101,
          "line": 7,
        },
      },
      "properties": {},
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/Hoisting.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 7,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {
      "title": "Example/Hoisting",
    },
  },
  "stories": [
    {
      "exportName": "Hoisting",
      "location": {
        "end": Position {
          "column": 21,
          "index": 131,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "index": 123,
          "line": 3,
        },
      },
      "properties": {},
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/Included.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 7,
      },
      "start": {
        "column": 15,
        "line": 4,
      },
    },
    "properties": {
      "includeStories": [
        "includedExport",
      ],
      "title": "Test/Exclusions/Included",
    },
  },
  "stories": [
    {
      "exportName": "includedExport",
      "location": {
        "end": Position {
          "column": 27,
          "index": 27,
          "line": 1,
        },
        "start": Position {
          "column": 13,
          "index": 13,
          "line": 1,
        },
      },
      "properties": {},
    },
    {
      "exportName": "otherExport",
      "location": {
        "end": Position {
          "column": 24,
          "index": 89,
          "line": 2,
        },
        "start": Position {
          "column": 13,
          "index": 78,
          "line": 2,
        },
      },
      "properties": {},
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/JsxExtension.stories.jsx 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 15,
        "line": 1,
      },
    },
    "properties": {
      "title": "Example/JSX extension",
    },
  },
  "stories": [
    {
      "exportName": "Story",
      "location": {
        "end": Position {
          "column": 18,
          "index": 73,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "index": 68,
          "line": 5,
        },
      },
      "properties": {},
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/MergeOne.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 15,
        "line": 1,
      },
    },
    "properties": {
      "title": "Example/Merge",
    },
  },
  "stories": [
    {
      "exportName": "One",
      "location": {
        "end": Position {
          "column": 16,
          "index": 63,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "index": 60,
          "line": 5,
        },
      },
      "properties": {},
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/MergeTwo.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 15,
        "line": 1,
      },
    },
    "properties": {
      "title": "Example/Merge",
    },
  },
  "stories": [
    {
      "exportName": "Two",
      "location": {
        "end": Position {
          "column": 16,
          "index": 63,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "index": 60,
          "line": 5,
        },
      },
      "properties": {},
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/SameName.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 8,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {
      "title": "Example/With Same Name",
    },
  },
  "stories": [
    {
      "exportName": "SameName",
      "location": {
        "end": Position {
          "column": 21,
          "index": 224,
          "line": 12,
        },
        "start": Position {
          "column": 13,
          "index": 216,
          "line": 12,
        },
      },
      "properties": {
        "args": {
          "children": "Same name story",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/SameNameChild.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 8,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {
      "title": "Example/With Same Name/Same Name",
    },
  },
  "stories": [
    {
      "exportName": "NestedStory",
      "location": {
        "end": Position {
          "column": 24,
          "index": 237,
          "line": 12,
        },
        "start": Position {
          "column": 13,
          "index": 226,
          "line": 12,
        },
      },
      "properties": {
        "args": {
          "children": "Nested same name story",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/StoryDeclarations.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 6,
        "line": 1,
      },
    },
    "properties": {
      "title": "Test/Story Declarations",
    },
  },
  "stories": [
    {
      "exportName": "ConstDeclarator",
      "location": {
        "end": Position {
          "column": 28,
          "index": 105,
          "line": 7,
        },
        "start": Position {
          "column": 13,
          "index": 90,
          "line": 7,
        },
      },
      "properties": {},
    },
    {
      "exportName": "SeparateDeclarator",
      "location": {
        "end": Position {
          "column": 24,
          "index": 169,
          "line": 9,
        },
        "start": Position {
          "column": 6,
          "index": 151,
          "line": 9,
        },
      },
      "properties": {},
    },
    {
      "exportName": "SeparateDeclarator2",
      "location": {
        "end": Position {
          "column": 25,
          "index": 236,
          "line": 10,
        },
        "start": Position {
          "column": 6,
          "index": 217,
          "line": 10,
        },
      },
      "properties": {
        "storyName": "Separate declarator with story name",
      },
    },
    {
      "exportName": "MultipleOne",
      "location": {
        "end": Position {
          "column": 24,
          "index": 448,
          "line": 15,
        },
        "start": Position {
          "column": 13,
          "index": 437,
          "line": 15,
        },
      },
      "properties": {},
    },
    {
      "exportName": "MultipleTwo",
      "location": {
        "end": Position {
          "column": 13,
          "index": 505,
          "line": 16,
        },
        "start": Position {
          "column": 2,
          "index": 494,
          "line": 16,
        },
      },
      "properties": {
        "storyName": "Multiple two (given name)",
      },
    },
    {
      "exportName": "FunctionStory",
      "location": {
        "end": Position {
          "column": 29,
          "index": 633,
          "line": 20,
        },
        "start": Position {
          "column": 16,
          "index": 620,
          "line": 20,
        },
      },
      "properties": {
        "storyName": "Renamed Function Story",
      },
    },
    {
      "exportName": "SeparateFunctionStory",
      "location": {
        "end": Position {
          "column": 30,
          "index": 768,
          "line": 25,
        },
        "start": Position {
          "column": 9,
          "index": 747,
          "line": 25,
        },
      },
      "properties": {},
    },
    {
      "exportName": "SeparateFunctionStory2",
      "location": {
        "end": Position {
          "column": 31,
          "index": 853,
          "line": 29,
        },
        "start": Position {
          "column": 9,
          "index": 831,
          "line": 29,
        },
      },
      "properties": {
        "storyName": "Separate function story with story name",
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/TitleInterpolation.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 10,
      },
      "start": {
        "column": 15,
        "line": 7,
      },
    },
    "properties": {
      "title": "Example/Title Interpolation",
    },
  },
  "stories": [
    {
      "exportName": "Primary",
      "location": {
        "end": Position {
          "column": 20,
          "index": 271,
          "line": 14,
        },
        "start": Position {
          "column": 13,
          "index": 264,
          "line": 14,
        },
      },
      "properties": {
        "args": {
          "children": "Interpolation/Sample",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/Top.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 8,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {
      "title": "Top",
    },
  },
  "stories": [
    {
      "exportName": "TopLevelStory",
      "location": {
        "end": Position {
          "column": 26,
          "index": 210,
          "line": 12,
        },
        "start": Position {
          "column": 13,
          "index": 197,
          "line": 12,
        },
      },
      "properties": {
        "args": {
          "children": "Top level story",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/TopHoisted.stories.js 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 8,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {
      "title": "Top Hoisted",
    },
  },
  "stories": [
    {
      "exportName": "TopHoisted",
      "location": {
        "end": Position {
          "column": 23,
          "index": 215,
          "line": 12,
        },
        "start": Position {
          "column": 13,
          "index": 205,
          "line": 12,
        },
      },
      "properties": {
        "args": {
          "children": "Top level hoisted story",
        },
      },
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/TypeScript.stories.tsx 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 9,
        "line": 19,
      },
      "start": {
        "column": 15,
        "line": 17,
      },
    },
    "properties": {
      "title": "Test/TypeScript/Sample",
    },
  },
  "stories": [
    {
      "exportName": "TypeScriptStory",
      "location": {
        "end": Position {
          "column": 28,
          "index": 77,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "index": 62,
          "line": 3,
        },
      },
      "properties": {},
    },
    {
      "exportName": "TypeScriptTypedStory",
      "location": {
        "end": Position {
          "column": 40,
          "index": 150,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "index": 123,
          "line": 5,
        },
      },
      "properties": {},
    },
    {
      "exportName": "TypeScriptTypedGenericStory",
      "location": {
        "end": Position {
          "column": 51,
          "index": 255,
          "line": 9,
        },
        "start": Position {
          "column": 13,
          "index": 217,
          "line": 9,
        },
      },
      "properties": {},
    },
    {
      "exportName": "TypeScriptTypeAssertionStory",
      "location": {
        "end": Position {
          "column": 41,
          "index": 362,
          "line": 13,
        },
        "start": Position {
          "column": 13,
          "index": 334,
          "line": 13,
        },
      },
      "properties": {},
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/TypeScriptAsMeta.stories.ts 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 9,
        "line": 7,
      },
      "start": {
        "column": 15,
        "line": 5,
      },
    },
    "properties": {
      "title": "Test/TypeScript/Default as Meta",
    },
  },
  "stories": [
    {
      "exportName": "TypeScriptStory",
      "location": {
        "end": Position {
          "column": 28,
          "index": 70,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "index": 55,
          "line": 3,
        },
      },
      "properties": {},
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/TypeScriptIdentifier.stories.ts 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 7,
      },
      "start": {
        "column": 6,
        "line": 5,
      },
    },
    "properties": {
      "title": "Test/TypeScript/Typed Identifier",
    },
  },
  "stories": [
    {
      "exportName": "TypeScriptStory",
      "location": {
        "end": Position {
          "column": 28,
          "index": 70,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "index": 55,
          "line": 3,
        },
      },
      "properties": {},
    },
  ],
}
`;

exports[`csf parses story file project/src/stories/TypeScriptIdentifierAsMeta.stories.ts 1`] = `
{
  "meta": {
    "declared": true,
    "location": {
      "end": {
        "column": 1,
        "line": 8,
      },
      "start": {
        "column": 6,
        "line": 6,
      },
    },
    "properties": {
      "title": "Test/TypeScript/Identifier Exported as Meta",
    },
  },
  "stories": [
    {
      "exportName": "TypeScriptStory",
      "location": {
        "end": Position {
          "column": 28,
          "index": 70,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "index": 55,
          "line": 3,
        },
      },
      "properties": {},
    },
  ],
}
`;
